# cne-evaluacion

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
cne_evaluation/: __init__.py  directories.py  images.py  version.py
docs/: config.example
etc/: cne.ini
examples/: usage.py
settings/: settings.py
